--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+/svelte/node_modules/
+/svelte/public/build/
+
+.DS_Store
